--- a/catkin_ws/src/active_walker/CMakeLists.txt
+++ b/catkin_ws/src/active_walker/CMakeLists.txt
@@ -28,7 +28,16 @@ find_package(catkin REQUIRED COMPONENTS
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
-find_package(Eigen3 REQUIRED)
+# find_package(Eigen3 REQUIRED)
+find_package(Eigen3)
+if(NOT EIGEN3_FOUND)
+  # Fallback to cmake_modules
+  find_package(Eigen REQUIRED)
+  set(EIGEN3_INCLUDE_DIRS ${EIGEN_INCLUDE_DIRS})
+  set(EIGEN3_LIBRARIES ${EIGEN_LIBRARIES})
+  # ...
+endif()
+
 find_package(OpenCV REQUIRED)
 
 ## Uncomment this if the package has a setup.py. This macro ensures
@@ -120,7 +129,7 @@ catkin_package(
  # INCLUDE_DIRS include
 #  LIBRARIES active_walker
  # CATKIN_DEPENDS rospy
- DEPENDS system_lib Eigen3 OpenCV
+ # DEPENDS system_lib Eigen3 OpenCV
 )
 
 ###########
