--- a/catkin_ws/src/simulation/walker_description/config/walker_control.yaml
+++ b/catkin_ws/src/simulation/walker_description/config/walker_control.yaml
@@ -1,4 +1,4 @@
-active_walker:
+walker:
     # Publish all joint states -----------------------------------
     joint_state_controller:
         type: joint_state_controller/JointStateController
