--- a/catkin_ws/src/walker_msgs/CMakeLists.txt
+++ b/catkin_ws/src/walker_msgs/CMakeLists.txt
@@ -68,6 +68,7 @@ add_message_files(
 add_service_files(
   FILES
   Detection2DTrigger.srv
+  PushingActionTrigger.srv
 )
 
 ## Generate actions in the 'action' folder
