--- a/catkin_ws/src/simulation/pedsim_ros/pedsim_simulator/config/PedsimSimulator.cfg
+++ b/catkin_ws/src/simulation/pedsim_ros/pedsim_simulator/config/PedsimSimulator.cfg
@@ -14,7 +14,7 @@ gen.add('force_obstacle', double_t, 0,
         'Obstacle force weight', 10.0, 0.0, 50.0)
 gen.add('sigma_obstacle', double_t, 0,
         'Sigma factor (obstacles)', 0.2, 0.1, 1.0)
-gen.add('force_social', double_t, 0, 'Social force weight', 5.1, 0.0, 10.0)
+gen.add('force_social', double_t, 0, 'Social force weight', 20.0, 0.0, 20.0)     # original version: 5.1
 gen.add('force_group_gaze', double_t, 0,
         'Group gaze force weight', 3.0, 0.0, 10.0)
 gen.add('force_group_coherence', double_t, 0,
