add gym reset features

--- a/catkin_ws/src/simulation/pedsim_ros/pedsim_msgs/CMakeLists.txt
+++ b/catkin_ws/src/simulation/pedsim_ros/pedsim_msgs/CMakeLists.txt
@@ -33,6 +33,9 @@ add_message_files( DIRECTORY msg
   SocialActivities.msg
   Waypoint.msg
   Waypoints.msg
+  
+  # samliu 20210814
+  GymAgentInfo.msg
 )
 
 # generate the messages
