--- a/catkin_ws/src/control/path_finding/cfg/footprint.yaml
+++ b/catkin_ws/src/control/path_finding/cfg/footprint.yaml
@@ -1,21 +1,17 @@
-# footprint: [[-0.1, 0.3314],
-#             [0.3, 0.3314],
-#             [0.4414, 0.19],
-#             [0.5914, 0.19],
-#             [0.5914, -0.19],
-#             [0.4414, -0.19],
-#             [0.3, -0.3314],
-#             [-0.1, -0.3314],
-#             [-0.1, -0.2014],
-#             [0.25, -0.2014],
-#             [0.3561, -0.0953],
-#             [0.3561, 0.0953],
-#             [0.25, 0.2014],
-#             [-0.1, 0.2014]]
 
-footprint: [[0.5, 0.4],
-            [0.7, 0.2],
-            [0.7, -0.2],
-            [0.5, -0.4],
-            [-0.2, -0.4],
-            [-0.2, 0.4]]
+# Simulation walker
+footprint: [[0.45, 0.4],
+            [0.65, 0.2],
+            [0.65, -0.2],
+            [0.45, -0.4],
+            [-0.15, -0.4],
+            [-0.15, 0.4]]
+
+
+# Real walker
+# footprint: [[0.5, 0.45],
+#             [0.7, 0.2],
+#             [0.7, -0.2],
+#             [0.5, -0.45],
+#             [-0.2, -0.45],
+#             [-0.2, 0.45]]
