--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,6 @@ catkin_ws/.catkin_tools
 
 # Pedsim model
 !catkin_ws/src/simulation/pedsim_ros/pedsim_gazebo_plugin/models
+# Pedsim gym test cases
+!catkin_ws/src/simulation/pedsim_ros/pedsim_simulator/scenarios/gym_env_config
 
